--- a/final-project/docker/compose.yml
+++ b/final-project/docker/compose.yml
@@ -7,7 +7,14 @@ services:
     - discovery.type=single-node
     - xpack.security.enabled=false
     - xpack.security.http.ssl.enabled=false
-
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 8G
+        reservations:
+          cpus: '0.25'
+          memory: 2G
   kibana:
     image: kibana:9.0.2
     ports:
